Redid some svg styling, fixed layout on small cards, changed links to projects, updated project texts.

--- a/css/components/sections/header.css
+++ b/css/components/sections/header.css
@@ -34,10 +34,10 @@ header {
 
 .nav a {
     color: var(--color-black);
-    font-size: var(--heading-medium);
     text-decoration-line: underline;
     text-decoration-thickness: 0.15rem;
     text-decoration-color: rgba(254, 254, 254, 0);
+    border-bottom: 0.15rem solid transparent;
     transition: text-decoration-color 600ms;
 }
 
